
- The `Disp *' button dereferences pointers as it should.

- In a separate window setting, data buttons are properly placed.

- Several hard-coded limits have been raised, such as the length of
  GDB commands.

- The `Home' and `End' keys work in all text fields.



Maintenance
-----------

- All remaining German comments in DDD source have been translated
  into English.



DDD 3.0
=======

DDD 3.0 brings a new, `clean' look, Java support, and JDB support.


User Interface
--------------

- New, `clean' look.  One single tool bar at the top provides all actions.

- Low screen space requirements.  In the default configuration, DDD
  requires less than 600x600 pixels.

- Configurable fonts.  You can easily customize DDD font settings via
  `Edit->Preferences->Fonts'.

- Tear-off menus are supported (and enabled by default).

- New key bindings.
  * All key bindings are conformant with the KDE style guide:
    Ctrl+O opens a file, Ctrl+S saves the session, etc.
  * ESC is the canonical `Interrupt' key.  Ctrl+C still
    interrupts, too, but can be assigned to Copy for full KDE
    style compliance.

- Edit->Cut/Copy/Paste/... now apply to the current destination
  text field (i.e. the one that has the selection, or the least
  recently used).  This way, you can cut/copy/paste across all
  text fields.

- History mania.  Several text fields, including the `()' argument
  field, now have drop down history selections.


Debuggers and Languages
-----------------------

- JDB support.  DDD now also supports JDB as inferior debugger.  All
  important JDB features are available via the GUI.

- Java support.  Requires GDB 4.17 or later (or JDB, of course).  All
  data display features are available in Java.

- Basic Ada support.  Rick Flower <Rick.Flower@trw.com> provided a set
  of patches for basic GDB/Ada (GNAT) support.

- Further improved FORTRAN support.  DDD refers to FORTRAN functions
  and variables by converting them to uppercase with trailing