@@ -351,6 +351,4 @@ Volunteers for these and other projects are welcome!
 362 Zdenek Sekera <zs@sgi.com> wants an option to delete arguments
     from the argument history.
 
-363 Have a `maintenance' option that enables a `Maintenance' menu.
-
 364 (Insert new project ideas here)
