@@ -27,7 +27,7 @@
 .\" `http://www.cs.tu-bs.de/softech/ddd/',
 .\" or send a mail to the DDD developers <ddd@ips.cs.tu-bs.de>.
 .\"
-.TH @ddd@ 1 "1998\-11\-24" "@DDD@ @VERSION@"
+.TH @ddd@ 1 "1998\-11\-26" "@DDD@ @VERSION@"
 .SH "NAME"
 @ddd@, x@ddd@ - the data display debugger
 .SH ""
@@ -5118,9 +5118,22 @@ The version of the \s-1@DDD@\s+1 executable that last wrote the
 version of the current \s-1@DDD@\s+1 executable, \s-1@DDD@\s+1 issues
 a warning.
 .TP
+.B "debugCoreDumps (\fPclass\fB DebugCoreDumps)"
+If `\fBon\fR', \s-1@DDD@\s+1 invokes a debugger on itself when
+receiving a fatal signal.
+.TP
+.B "dumpCore (\fPclass\fB DumpCore)"
+If `\fBon\fR' (default), \s-1@DDD@\s+1 dumps core when receiving a
+fatal signal.
+.TP
+.B "maintenance (\fPclass\fB Maintenance)"
+If `\fBon\fR', enables a top-level `\fBMaintenance\fR' menu with
+additional options.  See also the `\fB\-\-maintenance\fR' option,
+below.
+.TP
 .B "roulette (\fPclass\fB Roulette)"
-If `\fBon\fR', load a random program from one of the directories in
-the user's \fBPATH\fR environment variable.
+If `\fBon\fR', \s-1@DDD\+1 loads a random program from one of the
+directories in the user's \fBPATH\fR environment variable.
 .TP
 .B "russianRoulette (\fPclass\fB Roulette)"
 Like `\fBroulette\fR', but also run the program with the arguments
@@ -5299,6 +5312,10 @@ Show the \s-1@DDD@\s+1 license and exit.
 .B \-\-login \fIusername\fR
 Use \fIusername\fR as remote user name.  See `\fBREMOTE DEBUGGING\fR',
 above.
+.TP
+.B \-\-maintenance
+Enable the top-level `\fBMaintenance\fR' menu with options for
+debugging \s-1@DDD@\s+1.
 .TP
 .B \-\-manual
 Show this manual page and exit.
